update go api utils,docs
