# go/src/main/api/utils/ReadClass.go
@@ -12,15 +12,27 @@ import (
 	"gorm.io/gorm"
 )
 
+// GETメソッドで動作し、ステータス200と、DBのクラス一覧を返します
+// @Summary クラス一覧を返す
+// @Tags Utils
+// @Description GETメソッドで動作し、ステータス200と、DBのクラス一覧を返します
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.MessageSuccess
+// @Failure 400 {object} model.MessageError
+// @Router /utils/read/class [get]
 func ReadClass(c *gin.Context) {
 
+	responseWrap := model.ResponseWrap{}
+	responseWrap.Message = "success"
 	response := []model.ReadClassResponse{}
+	errResponse := model.MessageError{}
 
 	//DB接続とエラーハンドリング
 	db := infra.DBInitGorm()
 	if db.Error != nil {
-		errMsg := "データベース接続エラー"
-		c.JSON(http.StatusInternalServerError, gin.H{"error": errMsg})
+		errResponse.Message = "データベース接続エラー"
+		c.JSON(http.StatusInternalServerError, errResponse)
 		return
 	}
 
@@ -29,20 +41,22 @@ func ReadClass(c *gin.Context) {
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			// 行が見つからなかった場合の処理
-			fmt.Println("行が見つかりませんでした")
-			c.JSON(http.StatusBadRequest, gin.H{"message": "TABLE NOT FOUND"})
+			errResponse.Message = "RECORD NOT FOUND"
+		c.JSON(http.StatusInternalServerError, errResponse)
 			return
 		} else {
 			//その他のエラーハンドリング
+			errResponse.Message = "OTHER ERROR"
 			fmt.Println(err.Error())
-			c.JSON(http.StatusInternalServerError, gin.H{"message": "OTHER ERROR" })
+			c.JSON(http.StatusInternalServerError, errResponse)
 			return
 		}
 	}
 
 	fmt.Println(response)
+	responseWrap.Document = response
 
 	// レスポンスを返す
-	c.JSON(http.StatusOK, gin.H{"message":"success", "document": response})
+	c.JSON(http.StatusOK, responseWrap)
 	return
 }
