# go/src/main/docs/swagger.json
@@ -25,13 +25,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/apiHello.messageSuccess"
+                            "$ref": "#/definitions/model.MessageSuccess"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apiHello.messageError"
+                            "$ref": "#/definitions/model.MessageError"
                         }
                     }
                 }
@@ -54,13 +54,71 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/apiHello.messageSuccess"
+                            "$ref": "#/definitions/model.MessageSuccess"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apiHello.messageError"
+                            "$ref": "#/definitions/model.MessageError"
+                        }
+                    }
+                }
+            }
+        },
+        "/utils/read/class": {
+            "get": {
+                "description": "GETメソッドで動作し、ステータス200と、DBのクラス一覧を返します",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Utils"
+                ],
+                "summary": "クラス一覧を返す",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.MessageSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.MessageError"
+                        }
+                    }
+                }
+            }
+        },
+        "/utils/read/post": {
+            "get": {
+                "description": "GETメソッドで動作し、ステータス200と、DBの役職一覧を返します",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Utils"
+                ],
+                "summary": "役職一覧を返す",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseWrap"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.MessageError"
                         }
                     }
                 }
@@ -68,7 +126,7 @@
         }
     },
     "definitions": {
-        "apiHello.messageError": {
+        "model.MessageError": {
             "type": "object",
             "properties": {
                 "error": {
@@ -76,9 +134,18 @@
                 }
             }
         },
-        "apiHello.messageSuccess": {
+        "model.MessageSuccess": {
             "type": "object",
             "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ResponseWrap": {
+            "type": "object",
+            "properties": {
+                "document": {},
                 "message": {
                     "type": "string"
                 }
