# go/src/main/model/simple.go
@@ -9,3 +9,8 @@ type MessageSuccess struct {
 type MessageError struct {
 	Message string `json:"error"`
 }
+
+type ResponseWrap struct {
+	Message string `json:"message"`
+	Document any `json:"document"`
+}
